tests/type/errors/if_condition_not_bool.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
	if 1 {
		var a = 1;
	}
}

scene main
{
}
